--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="churchill-content/assets/css/style.css" rel="stylesheet">
     </head>
     
-    <body>
+    <header>
         <h1 id="title"><a href="index.html">Churchill House</a></h1>
             <nav>
                 <ul>
@@ -20,6 +20,8 @@
                     <li><a href="#history">History</a></li>
                 </ul>
             </nav>
+    </header>
+    <body>
         <section id="introduction">
             <h2>Introduction</h2>
             <div><a href="#title">Back to Top</a></div>
@@ -43,7 +45,7 @@
         <h2 id="description">Description</h2>
         <div><a href="#title">Back to Top</a></div>
                 
-        <div>
+        <div class="row-hero">
             <img 
                  title="House Plan"
                  alt="Churchill House Plan Document" 
